# toDoListV2

./: README.md  pyproject.toml
backend/: .coverage  API_TEST_REPORT.md  README.md  README_API_TESTING.md  TEST_FIX_REPORT.md  TEST_REPORT.md  api_test_report_20250804_204857.md  init_db.sql  pyproject.toml  test_api.py  test_api_automated.py  test_api_curl.sh  todo.db
backend/src/todolistv2/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
backend/src/todolistv2/api/: __init__.py  todos.py
backend/tests/: conftest.py  test_api.py
docs/: api-testing.md  technical-architecture.md
examples/: basic_example.py
frontend/: package-lock.json  package.json  test_api_connection.js  test_browser.js  test_frontend.js  test_frontend_quick.js  test_simple.js
frontend/src/: App.tsx
frontend/src/app/: page.tsx
frontend/src/components/: TodoFilter.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/hooks/: useTodos.ts
frontend/src/lib/: api.ts
frontend/src/services/: api.ts
frontend/src/types/: todo.ts
scripts/: dev.sh
